[project]
name = "auto-exchange"
version = "0.1.0"
description = "a simple django app for listing automobiles"
authors = [
    {name = "MANOVISHNU ADEPU",email = "geekymano@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "django-ckeditor-5 (>=0.2.18,<0.3.0)",
    "django-allauth (==0.54.0)",
    "django-ckeditor (==6.3.2)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.10"
mypy = "^1.15.0"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"